[gd_scene load_steps=7 format=3 uid="uid://cr8g2ewri4sld"]

[ext_resource type="Script" path="res://scripts/objects/shelf_data.gd" id="1_46c5h"]
[ext_resource type="Texture2D" uid="uid://cr5ayvghqy7os" path="res://textures/objects/shelf_atlas.tres" id="2_6s0dw"]
[ext_resource type="Texture2D" uid="uid://vymidhl6oc3v" path="res://textures/objects/products/shelved_canned_food_atlas.tres" id="3_g0vos"]
[ext_resource type="Script" path="res://scripts/objects/products/shelved_items.gd" id="4_2icbu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqj1n"]
size = Vector2(32, 5)

[sub_resource type="CircleShape2D" id="CircleShape2D_yhb2b"]
radius = 16.0

[node name="Shelf" type="StaticBody2D"]
script = ExtResource("1_46c5h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_6s0dw")

[node name="ShelvedItems" type="Sprite2D" parent="."]
texture = ExtResource("3_g0vos")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)
script = ExtResource("4_2icbu")
debug_percentage = 0.9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 13.5)
shape = SubResource("RectangleShape2D_kqj1n")

[node name="InteractShape" type="Area2D" parent="."]
position = Vector2(0, 16)

[node name="InteractArea" type="CollisionShape2D" parent="InteractShape"]
shape = SubResource("CircleShape2D_yhb2b")

[node name="InteractPos" type="Node2D" parent="."]
position = Vector2(0, 18)

[connection signal="body_entered" from="InteractShape" to="." method="_on_interact_shape_body_entered"]
[connection signal="body_exited" from="InteractShape" to="." method="_on_interact_shape_body_exited"]
